update readme and package name

--- a/client-lib/package.json
+++ b/client-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dailyco-api-client",
+  "name": "@maurerkrisztian/dailyco-api-client",
   "version": "1.0.0",
   "description": "NestJS api client",
   "author": "Maurer Kirsztian",
